<resources>
    <string name="app_name">DinoDiscoveryAlphaB</string>
<<<<<<< HEAD
    <string name="menu_option_4x3">4x3 Game</string>
    <string name="menu_option_4x4">4x4 Game</string>
    <string name="menu_option_5x5">5x5 Game</string>
    <string name="menu_option_6x6">6x6 Game</string>
    <string name="menu_option_difficulty">Difficulty</string>
    <string name="difficulty">Difficulty</string>
    <string name="menu_image_difficulty">difficulty_screen</string>
    <string name="menu_option_difficulty2">Difficulty2</string>
=======
    <string name="button_4x4_game">4x4 Game</string>
<<<<<<< HEAD
    <string name="menu_title">Dino Discovery</string>
    <string name="menu_title_DinoDiscovery">Dino Discovery</string>
    <string name="menu_title_outline">Dino Discovery</string>
=======
    <string name="android_contentdescription">android:contentDescription</string>
    <string name="android_contentdescription">android:contentDescription</string>
    <string name="android_contentdescription">android:contentDescription</string>
    <string name="android_contentdescription">android:contentDescription</string>
    <string name="android_contentdescription">android:contentDescription</string>
>>>>>>> 6f228a021139c84e1ab38bc7f7c1ef00fa67af77
    >>>>>>> 3b21fe057d7ec96ee28e1478f63d595e569698b3
</resources>
